--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>javax.ejb-api</artifactId>
             <version>3.2-b01</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.16.Final</version>
+        </dependency>
     </dependencies>
 
 
