--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger = debug, file
 
 #login
 log4j.logger.cw.servlets.json = DEBUG, login
-log4j.logger.cw.controller.Controller = DEBUG, login
+log4j.logger.cw.controller = DEBUG, login
 log4j.appender.login = org.apache.log4j.FileAppender
 log4j.appender.login.file = login.log
 log4j.appender.login.layout = org.apache.log4j.PatternLayout
