--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,11 +2,11 @@ log4j.rootLogger = debug, file
 
 
 #login
-log4j.logger.cw.servlets.json = DEBUG, login
-log4j.logger.cw.controller = DEBUG, login
+log4j.logger.cw.servlets.json.CreateVisitJsonServlet = DEBUG, login
+log4j.logger.cw.controller.command.impl.CreateVisitCommand   = DEBUG, login
+log4j.logger.cw.check.impl = DEBUG, login
+log4j.logger.cw.model.operations = DEBUG, login
 log4j.appender.login = org.apache.log4j.FileAppender
-log4j.appender.login.file = login.log
+log4j.appender.login.file = login1.log
 log4j.appender.login.layout = org.apache.log4j.PatternLayout
 log4j.appender.login.layout.conversionPattern = %d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
-
-
